application/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress-class
  namespace: ingress-nginx
spec:
  controller: ingress.k8s.aws/alb
