application/app-ui.yaml
#nginx deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ui
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-ui
  template:
    metadata:
      labels:
        app: app-ui
    spec:
      containers:
      - name: app-ui
        image: public.ecr.aws/aws-containers/retail-store-sample-ui:0.8.0
        ports:
        - containerPort: 8080
