application/deployment.yaml
#nginx deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: eks-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
