application/catalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    name: catalog
  namespace: eks-sample-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: catalog
