application/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana-monitoring
