application/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: eks-sample-app
  labels:
    name: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: http
  selector:
    app: mysql
