application/svc.yaml
# srvc for routing request to nginx pod
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: eks-sample-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
