application/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: appstore
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app-ui
