application/grafana-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: 'HTTP'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: 200-499
    alb.ingress.kubernetes.io/target-type: 'ip'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/actions.default: >
      {"Type": "forward", "ForwardConfig": {"TargetGroups": [{"ServiceName": "grafana-service", "ServicePort": "3000"}]}}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 3000}]'
    alb.ingress.kubernetes.io/subnets: subnet-06818b2329a21cd3a, subnet-050899c116d3c8050, subnet-01a6100db3bf27588
spec:
  ingressClassName: alb
  rules:
  - host: grafana.42744448630.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
             number: 3000
